--- a/views/gallery/index.ejs
+++ b/views/gallery/index.ejs
@@ -105,19 +105,20 @@
               <div class="col-12 col-md-6 col-lg-4 justify-content-center align-items-center">
                 <a class='atag' href="/gallery/<%= post._id %>">
                   <div class="card" style="width: 18rem;">
-
-                    <% if(post.image.length>1) { %>
-                      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                        <div class="carousel-inner">
-                          <% for(let x=0;x<post.image.length;x++){ %>
-                            <div class="carousel-item <%= x== 0 ? 'active' : null %>">
-                              <img class='img lazyload' src="data:image/<%= post.image[x].contentType%>;base64,<%= post.image[x].data.toString('base64')%>">
-                            </div>
-                          <% } %>
-                        </div>
-                      </div> 
-                    <% } else if (post.image.length == 1){ %>
-                      <img class='img lazyload' src="data:image/<%= post.image[0].contentType%>;base64,<%= post.image[0].data.toString('base64')%>">
+                    <% if (post.image) { %>
+                      <% if(post.image.length>1) { %>
+                        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                          <div class="carousel-inner">
+                            <% for(let x=0;x<post.image.length;x++){ %>
+                              <div class="carousel-item <%= x== 0 ? 'active' : null %>">
+                                <img class='img lazyload' src="data:image/<%= post.image[x].contentType%>;base64,<%= post.image[x].data.toString('base64')%>">
+                              </div>
+                            <% } %>
+                          </div>
+                        </div> 
+                      <% } else if (post.image.length == 1){ %>
+                        <img class='img lazyload' src="data:image/<%= post.image[0].contentType%>;base64,<%= post.image[0].data.toString('base64')%>">
+                      <%}%>   
                     <% } else { %>
                       <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617816/images/emptypic_ri9jxa.png" class="img lazyload" alt="images">
                     <% } %>
