--- a/views/tourist/show.ejs
+++ b/views/tourist/show.ejs
@@ -100,30 +100,31 @@
           <% if(post.author){ %>
             <p class='author'><em>Posted by <span class='username'><%= post.author.username %></span></em></p>
           <%}%>
-
-          <% if(post.image.length>1) { %>
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner">
-
-                <% for(let x=0;x<post.image.length;x++){ %>
-                  <div class="carousel-item <%= x== 0 ? 'active' : null %>">
-                    <img class='img' src="data:image/<%= post.image[x].contentType%>;base64,<%= post.image[x].data.toString('base64')%>">
-                  </div>
-                <% } %>
-
-              </div>
+          <% if(post.image){%>
+            <% if(post.image.length>1) { %>
+              <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
   
-              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div> 
-          <% } else if (post.image.length == 1){ %>
-            <img class='img' src="data:image/<%= post.image[0].contentType%>;base64,<%= post.image[0].data.toString('base64')%>">
+                  <% for(let x=0;x<post.image.length;x++){ %>
+                    <div class="carousel-item <%= x== 0 ? 'active' : null %>">
+                      <img class='img' src="data:image/<%= post.image[x].contentType%>;base64,<%= post.image[x].data.toString('base64')%>">
+                    </div>
+                  <% } %>
+  
+                </div>
+    
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div> 
+            <% } else if (post.image.length == 1){ %>
+              <img class='img' src="data:image/<%= post.image[0].contentType%>;base64,<%= post.image[0].data.toString('base64')%>">
+            <%}%>  
           <% } else { %>
             <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617816/images/emptypic_ri9jxa.png" class="img" alt="images">
           <% } %>
