add sanitizer n some refactor

--- a/views/activity/show.ejs
+++ b/views/activity/show.ejs
@@ -107,7 +107,7 @@
           <% } %>
           
           <% if(post.content) {%>
-            <p class='para-1 my-3 my-md-4'><%= post.content %></p>
+            <p class='para-1 my-3 my-md-4'><%- post.content %></p>
           <%}%>
 
           <% if(post.video) { %>
