--- a/views/activity/show.ejs
+++ b/views/activity/show.ejs
@@ -111,7 +111,7 @@
           <%}%>
 
           <% if(post.video) { %>
-            <div class="vid pb-4">
+            <div class="vid mb-4">
               <iframe class='video' src="<%= post.video%>" frameborder="0" encrypted-media" allowfullscreen></iframe>
             </div>
           <% } %>
